Upgraded Admin APIs added more features : view bookings, hotel, user infos,  advanced search etc
